tests/miniJava/neg/001451_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int Main [ 0 ] ; } }
